--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,8 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>-->
 
     <!--local scripts-->
+    <script src="/static_components/array-polyfills/find-index.js"></script>
+    <script src="/static_components/array-polyfills/index-of.js"></script>
     <script src="/static_components/angular/angular.js"></script>
     <script src="/static_components/angular-aria/angular-aria.js"></script>
     <script src="/static_components/angular-animate/angular-animate.js"></script>
